--- a/zohoapp/templates/chartofaccount_home.html
+++ b/zohoapp/templates/chartofaccount_home.html
@@ -264,8 +264,8 @@
                  </div>
   
                  <div class="opt">
-                  Eqity
-                 <li>Eqity</li>                  
+                  Equity
+                 <li>Equity</li>                  
                  </div>
   
                  <div class="opt">
@@ -921,8 +921,8 @@
                        </div>
         
                        <div class="opt">
-                        Eqity
-                       <li>Eqity</li>                  
+                        Equity
+                       <li>Equity</li>                  
                        </div>
         
                        <div class="opt">
@@ -1569,8 +1569,8 @@
         `Track your taxes in this account if your business sells digital services to foreign customers.`
       )
 
-    }else if(vals == "Eqity"){
-      document.getElementById('message_hd').innerHTML = "Eqity"
+    }else if(vals == "Equity"){
+      document.getElementById('message_hd').innerHTML = "Equity"
       document.getElementById('message').innerHTML = ""
       document.getElementById("sub_account88").checked=false;
 
@@ -1971,8 +1971,8 @@
         `Track your taxes in this account if your business sells digital services to foreign customers.`
       )
 
-    }else if(vals == "Eqity"){
-      document.getElementById('message_hd').innerHTML = "Eqity"
+    }else if(vals == "Equity"){
+      document.getElementById('message_hd').innerHTML = "Equity"
       document.getElementById('message').innerHTML = ""
       document.getElementById("cr_div").style.display="none";
       document.getElementById("name").style.display="block";
@@ -2299,7 +2299,7 @@
       function show_parent88(){
         var vals= document.getElementById('soValue1').value;
         console.log(vals);      
-        if(vals == "Eqity"){
+        if(vals == "Equity"){
         var chk = document.getElementById("sub_account88").checked
         if(chk== true){
           document.getElementById("parent_div88").style.display="block";
