--- a/zohoapp/templates/chartofaccount_home.html
+++ b/zohoapp/templates/chartofaccount_home.html
@@ -105,11 +105,11 @@
   
   <div class="row">
     <div class="col-sm-12" style="text-align: right;">
-      <a href="" data-toggle="modal" data-target="#create_account" style="text-decoration: none;">New Account</a>
+      <a href="" data-toggle="modal" data-target="#create_account" class="btn btn-warning" style="text-decoration: none;">New Account</a>
     </div>
 
   </div>
-  <div class="row mt-4">
+  <!-- <div class="row mt-4">
     <div class="col-sm-12">
 
       <form action="{% url 'filter_chellan_type'%}" method="POST" style="text-align: left;">
@@ -137,7 +137,7 @@
       
       </form>
     </div>
-  </div>
+  </div> -->
 
   <div class="row mt-4">
     <div class="col-sm-12">
