--- a/zohoapp/templates/chartofaccount_view.html
+++ b/zohoapp/templates/chartofaccount_view.html
@@ -1450,7 +1450,7 @@ function printForm() {
                 </div>
               </div>
 
-       <!-- .................................................................................        -->       
+       <!-- .................................................................................  -->       
        {% if ind.account_type == 'Other Current Assets' %}
 
             {% if ind.sub_account == 'on' %}
@@ -1463,7 +1463,7 @@ function printForm() {
                     <select class="form-control text-dark bg-light" name="parent_account1" id="parent_account1">
                       <option value="" class="bg-dark text-light text-center" disabled>Other Current Assets</option>
                       <option value="{{ ind.parent_account }}" class="bg-dark text-light text-center" selected>{{ ind.parent_account }}</option>
-                      <option value="Advance Tax">Advance Tax</option>
+                      <!-- <option value="Advance Tax">Advance Tax</option>
                       <option value="Employee Advance">Employee Advance</option>
                       <option value="Prepaid Expenses">Prepaid Expenses</option>
                       <option value="Input Tax Credits">Input Tax Credits</option>
@@ -1474,7 +1474,7 @@ function printForm() {
                         <option value="Input SGST">&nbsp; &nbsp;&nbsp;Input SGST</option>
                       <option value="TDS Receivable">TDS Receivable</option>
                       <option value="TDS Receivable">Reserve Charge Tax Input But not Due</option>
-                      <option value="TDS Receivable">Sales to Customers(Cash)</option>
+                      <option value="TDS Receivable">Sales to Customers(Cash)</option> -->
                     </select>
                   </div>
                 </div>
@@ -1508,23 +1508,18 @@ function printForm() {
               {% endif %}
 
               {% if ind.account_type == 'Cash' %}
-
               {% if ind.sub_account == 'on' %}
-
               <div id="parent_div2" style="display: block;">
                 <div class="row mt-3">
                   <div class="col-sm-4">
                     <label for="">Parent Account:</label>
                   </div>
-                  <div class="col-sm-8">
-                
+                  <div class="col-sm-8">               
                     <select class="form-control text-dark bg-light" name="parent_account2" id="parent_account2">
                       <option value="" class="bg-dark text-light text-center" disabled>Cash</option>
                       <option value="{{ ind.parent_account }}" class="bg-dark text-light text-center" selected>{{ ind.parent_account }}</option>
-
-                      <option value="Petty Cash">Petty Cash</option>
-                      <option value="Undeposited Fund">Undeposited Fund</option>
-                      
+                      <!-- <option value="Petty Cash">Petty Cash</option>
+                      <option value="Undeposited Fund">Undeposited Fund</option>                      -->
                     </select>
                   </div>
                 </div>
@@ -1535,25 +1530,19 @@ function printForm() {
                   <div class="col-sm-4">
                     <label for="">Parent Account:</label>
                   </div>
-                  <div class="col-sm-8">
-                
+                  <div class="col-sm-8">               
                     <select class="form-control text-dark bg-light" name="parent_account2" id="parent_account2">
                       <option value="" class="bg-dark text-light text-center" disabled>Cash</option>
                       <option value="" class="bg-dark text-light text-center" selected></option>
-
                       <option value="Petty Cash">Petty Cash</option>
-                      <option value="Undeposited Fund">Undeposited Fund</option>
-                      
+                      <option value="Undeposited Fund">Undeposited Fund</option>                     
                     </select>
                   </div>
                 </div>
               </div>
               {% endif %}
               {% endif %}
-
-
             {% if ind.account_type == 'Fixed Assets' %}
-
               {% if ind.sub_account == 'on' %}
               <div id="parent_div3" style="display: block;">
                 <div class="row mt-3">
@@ -1565,9 +1554,7 @@ function printForm() {
                     <select class="form-control text-dark bg-light" name="parent_account3" id="parent_account3">
                       <option value="" class="bg-dark text-light text-center" disabled>Fixed Asset</option>
                       <option value="{{ ind.parent_account }}" class="bg-dark text-light text-center" selected>{{ ind.parent_account }}</option>
-
-                      <option value="Furniture and Equipment">Furniture and Equipment</option>
-                      
+                      <!-- <option value="Furniture and Equipment">Furniture and Equipment</option> -->                     
                     </select>
                   </div>
                 </div>
@@ -1607,7 +1594,7 @@ function printForm() {
                       <option value="" class="bg-dark text-light text-center" disabled>Stock</option>
                       <option value="{{ ind.parent_account }}" class="bg-dark text-light text-center" selected>{{ ind.parent_account }}</option>
 
-                      <option value="Inventory Asset">Inventory Asset</option>
+                      <!-- <option value="Inventory Asset">Inventory Asset</option> -->
                       
                     </select>
                   </div>
@@ -1648,18 +1635,16 @@ function printForm() {
                       <option value="" class="bg-dark text-light text-center" disabled>Other Current Liability</option>
                       <option value="{{ ind.parent_account }}" class="bg-dark text-light text-center" selected>{{ ind.parent_account }}</option>
 
-                      <option value="Employee Reimbursements">Employee Reimbursements</option>
+                      <!-- <option value="Employee Reimbursements">Employee Reimbursements</option>
                       <option value="Opening Balance Adjustments">Opening Balance Adjustments</option>
                       <option value="Tax Payable">Tax Payable</option>
                       <option value="Unearned Revenue">Unearned Revenue</option>
                       <option value="GST Payable">GST Payable</option>
-                      <!-- <optgroup> -->
                         <option value="Output CGST">&nbsp;&nbsp;&nbsp;Output CGST</option>
                         <option value="Output IGST">&nbsp;&nbsp;&nbsp;Output IGST</option>
                         <option value="Output SGST">&nbsp;&nbsp;&nbsp;Output SGST</option>
 
-                      <!-- </optgroup> -->
-                      <option value="TDS Payable">TDS Payable</option>
+                      <option value="TDS Payable">TDS Payable</option> -->
 
 
                       
@@ -1714,10 +1699,8 @@ function printForm() {
                     <select class="form-control text-dark bg-light" name="parent_account6" id="parent_account6">
                       <option value="" class="bg-dark text-light text-center" disabled>Long Term Liability</option>
                       <option value="{{ ind.parent_account }}" selected>{{ ind.parent_account }}</option>
-                      <option value="Construction Loans">Construction Loans</option>
-                      <option value="Mortgages">Mortgages</option>
-
-                      
+                      <!-- <option value="Construction Loans">Construction Loans</option>
+                      <option value="Mortgages">Mortgages</option> -->                      
                     </select>
                   </div>
                 </div>
@@ -1728,8 +1711,7 @@ function printForm() {
                   <div class="col-sm-4">
                     <label for="">Parent Account:</label>
                   </div>
-                  <div class="col-sm-8">
-                
+                  <div class="col-sm-8">               
                     <select class="form-control text-dark bg-light" name="parent_account6" id="parent_account6">
                       <option value="" class="bg-dark text-light text-center" disabled>Long Term Liability</option>
                       <option value="" selected></option>
@@ -1756,7 +1738,7 @@ function printForm() {
                     <select class="form-control text-dark bg-light" name="parent_account7" id="parent_account7">
                       <option value="" class="bg-dark text-light text-center" disabled>Other Liability</option>
                       <option value="{{ ind.parent_account }}" selected>{{ ind.parent_account }}</option>
-                      <option value="Tag Adjustments">Tag Adjustments</option>                     
+                      <!-- <option value="Tag Adjustments">Tag Adjustments</option>                      -->
                     </select>
                   </div>
                 </div>
@@ -1792,7 +1774,7 @@ function printForm() {
                     <select class="form-control text-dark bg-light" name="parent_account8" id="parent_account8">
                       <option value="" class="bg-dark text-light text-center" disabled>Equity</option>
                       <option value="{{ ind.parent_account }}" selected>{{ ind.parent_account }}</option>
-                      <option value="Drawings">Drawings</option>                     
+                      <!-- <option value="Drawings">Drawings</option>                     
                       <option value="Opening Balance Offset">Opening Balance Offset</option>                     
                       <option value="Owner's Equity">Owner's Equity</option>                     
                       <option value="Retained Earnings">Retained Earnings</option>                     
@@ -1800,7 +1782,7 @@ function printForm() {
                       <option value="Distributions">Distributions</option>  
                       <option value="Dividends Paid">Dividends Paid</option>                     
                       <option value="Investments">Investments</option>                     
-                   
+                    -->
 
                     </select>
                   </div>
@@ -1844,13 +1826,13 @@ function printForm() {
                     <select class="form-control text-dark bg-light" name="parent_account9" id="parent_account9">
                       <option value="" class="bg-dark text-light text-center" disabled>Income</option>
                       <option value="{{ ind.parent_account }}" selected>{{ ind.parent_account }}</option>
-                      <option value="Discount">Discount</option>                     
+                      <!-- <option value="Discount">Discount</option>                     
                       <option value="General Income">General Income</option>                     
                       <option value="Interest Income">Interest Income</option>                     
                       <option value="Late Fee Income">Late Fee Income</option>                     
                       <option value="Other Charges">Other Charges</option>                     
                       <option value="sales">sales</option>  
-                      <option value="Shipping Charge">Shipping Charge</option>                     
+                      <option value="Shipping Charge">Shipping Charge</option>                      -->
                     </select>
                   </div>
                 </div>
@@ -1890,7 +1872,7 @@ function printForm() {
                     <select class="form-control text-dark bg-light" name="parent_account10" id="parent_account10">
                       <option value="" class="bg-dark text-light text-center" disabled>Expense</option>
                       <option value="{{ ind.parent_account }}" selected>{{ ind.parent_account }}</option>
-                      <option value="Advertising and Marketing">Advertising and Marketing</option>                     
+                      <!-- <option value="Advertising and Marketing">Advertising and Marketing</option>                     
                       <option value="Automobile Expense">Automobile Expense</option>                     
                       <option value="Bad Debt">Bad Debt</option>                     
                       <option value="Bank Fees and Charges">Bank Fees and Charges</option>                     
@@ -1917,7 +1899,7 @@ function printForm() {
                       <option value="Merchandise">Merchandise</option>                     
                       <option value="Raw Materials And Consumables">Raw Materials And Consumables</option>                     
                       <option value="Transportation Expense">Uncategorized</option>                     
-
+ -->
 
                     </select>
                   </div>
@@ -1979,12 +1961,12 @@ function printForm() {
                     <select class="form-control text-dark bg-light" name="parent_account11" id="parent_account11">
                       <option value="" class="bg-dark text-light text-center" disabled>Cost Of Goods Sold</option>
                       <option value="{{ ind.parent_account }}" selected>{{ ind.parent_account }}</option>
-                      <option value="Cost Of Goods Sold">Cost Of Goods Sold</option>                     
+                      <!-- <option value="Cost Of Goods Sold">Cost Of Goods Sold</option>                     
                       <option value="Job Costing">Job Costing</option>                     
                       <option value="Labor">Labor</option>                     
                       <option value="Materials">Materials</option>                     
                       <option value="Subcontractor">Subcontractor</option>                     
-                      
+                       -->
                     </select>
                   </div>
                 </div>
@@ -2025,7 +2007,7 @@ function printForm() {
                     <select class="form-control text-dark bg-light" name="parent_account12" id="parent_account12">
                       <option value="" class="bg-dark text-light text-center" disabled>Other Expense</option>
                       <option value="{{ ind.parent_account }}" selected>{{ ind.parent_account }}</option>
-                      <option value="Cost Of Goods Sold">Exchange Gain or Loss</option>                                          
+                      <!-- <option value="Cost Of Goods Sold">Exchange Gain or Loss</option>                                           -->
                     </select>
                   </div>
                 </div>
