--- a/zohoapp/templates/chartofaccount_home.html
+++ b/zohoapp/templates/chartofaccount_home.html
@@ -1765,7 +1765,7 @@
       document.getElementById("sub_div222").style.display="none";
 
       $('#message').append(
-        `Reflects expenses incurred for running normal business operations, such as :<ul><li>Advertisements and Marketing</li> <li>Business Travel Expenses</li><li>Advertisements and Marketing</li> <li>Business Travel Expenses</li> <li>Utility Expenses</li></ul>`
+        `Reflects expenses incurred for running normal business operations, such as :<ul><li>Advertisements and Marketing</li> <li>Business Travel Expenses</li><li>License Fees</li><li>Utility Expenses</li></ul>`
       )
 
     }else if(vals == "Cost Of Goods Sold"){
@@ -1841,7 +1841,7 @@
       document.getElementById("sub_div99").style.display="none";
 
       $('#message').append(
-        `Track miscellaneous expenses incurred for activities other than primary business operations or create additional accounts to track default expenses like insurance or contribution towards charity.`
+        `Reflects expenses incurred for activities unrelated to primary business operations like :<ul><li>Bad debts</li> <li>Contributions Towards Charity</li><li>Insurance</li></ul>`
       )
 
     }
