--- a/zohoapp/templates/chartofaccount_view.html
+++ b/zohoapp/templates/chartofaccount_view.html
@@ -230,7 +230,7 @@ function printForm() {
                 </div>
                 <ul class="options">
                   <div class="opt">
-                      <span style="font-weight: bold;">Assets</span><br>
+                      <span style="font-weight: bold;">Assets</span>
                    <li>Other Assets </li>
                    <li>Other Current Asset</li>
                    <li>Cash </li>
@@ -541,7 +541,7 @@ function printForm() {
               </div>
               <ul class="options1">
                 <div class="opt">
-                  Assets
+                  <span style="font-weight: bold;">Assets</span>
                  <li>Other Assets</li>
                  <li>Other Current Assets</li>
                  <li>Cash</li>
@@ -552,7 +552,7 @@ function printForm() {
                 </div>
                 
                  <div class="opt">
-                  Liability
+                  <span style="font-weight: bold;">Liability</span>
                  <li>Other Liability</li>
                  <li>Other Current Liability</li>
                  <li>Credit Card</li>
@@ -561,18 +561,18 @@ function printForm() {
                  </div>
   
                  <div class="opt">
-                  Equity
+                  <span style="font-weight: bold;">Equity</span>
                  <li>Equity</li>                  
                  </div>
   
                  <div class="opt">
-                  Income
+                  <span style="font-weight: bold;">Income</span>
                  <li>Income</li>   
                  <li>Other Income</li>               
                  </div>
   
                  <div class="opt">
-                  Expense
+                  <span style="font-weight: bold;">Expense</span>
                  <li>Expense</li>   
                  <li>Cost Of Goods Sold</li>  
                  <li>Other Expense</li>             
@@ -2183,7 +2183,7 @@ function printForm() {
               <div class="alert alert-warning alert-dismissible fade show">
                 <span id="message_hd1">Expense</span> <br>
                 <span id="message1">
-                  Reflects expenses incurred for running normal business operations, such as :<ul><li>Advertisements and Marketing</li> <li>Business Travel Expenses</li><li>Advertisements and Marketing</li> <li>Business Travel Expenses</li> <li>Utility Expenses</li></ul>
+                  Reflects expenses incurred for running normal business operations, such as :<ul><li>Advertisements and Marketing</li> <li>Business Travel Expenses</li><li>License Fees</li><li>Utility Expenses</li></ul>
                 </span>
                 <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
               </div>
@@ -2365,7 +2365,7 @@ function printForm() {
               <div class="alert alert-warning alert-dismissible fade show">
                 <span id="message_hd1">Expense</span> <br>
                 <span id="message1">
-                  Track miscellaneous expenses incurred for activities other than primary business operations or create additional accounts to track default expenses like insurance or contribution towards charity.
+                  Reflects expenses incurred for activities unrelated to primary business operations like :<ul><li>Bad debts</li> <li>Contributions Towards Charity</li><li>Insurance</li></ul>
                 </span>
                   <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
 
@@ -3012,7 +3012,7 @@ function printForm() {
         document.getElementById("sub_div222").style.display="none";
   
         $('#message').append(
-          `Reflects expenses incurred for running normal business operations, such as :<ul><li>Advertisements and Marketing</li> <li>Business Travel Expenses</li><li>Advertisements and Marketing</li> <li>Business Travel Expenses</li> <li>Utility Expenses</li></ul>`
+          `Reflects expenses incurred for running normal business operations, such as :<ul><li>Advertisements and Marketing</li><li>License Fees</li> <li>Business Travel Expenses</li> <li>Utility Expenses</li></ul>`
         )
   
       }else if(vals == "Cost Of Goods Sold"){
@@ -3088,7 +3088,7 @@ function printForm() {
         document.getElementById("sub_div99").style.display="none";
   
         $('#message').append(
-          `Track miscellaneous expenses incurred for activities other than primary business operations or create additional accounts to track default expenses like insurance or contribution towards charity.`
+          `Reflects expenses incurred for activities unrelated to primary business operations like :<ul><li>Bad debts</li> <li>Contributions Towards Charity</li><li>Insurance</li></ul>`
         )
   
       }
